--- a/css/common.css
+++ b/css/common.css
@@ -4,11 +4,49 @@
 
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+}
+
+/* task-1 */
+.item {
+  list-style: none;
+  background-color: #f6f6fe;
+}
+
+/* task-2 */
+
+/* .gallery {
+  display: flex;
+  list-style: none;
+  padding: 0;
+}
+
+.gallery li {
+  margin: 5px;
+}
+
+.gallery img {
+  max-width: 360px;
+  height: auto;
+} */
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  gap: 10px;
+  padding: 10px;
+  list-style: none;
+}
+
+.gallery img {
+  max-width: 360px;
+  height: auto;
+  object-fit: cover;
 }
